Bug 153280 - backout of pjpeg (bug 76776) due to Tp regression.